--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//cms_helper/templatetags/page_tags.py=utf-8
 encoding//contactlist/migrations/0005_auto__add_field_contact_order.py=utf-8
+encoding//contactlist/models.py=utf-8
 encoding//gcsgroupwww/settings.py=utf-8
 encoding//orderedmodel/admin.py=utf-8
 encoding//rdoc/models.py=utf-8
